--- a/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
@@ -54,8 +54,8 @@
 					   <li class="#{view.viewId == '/login.xhtml' ? 'active' : ''}"><h:link outcome = "login">Bibliothek</h:link></li>
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
 					   <li class="#{view.viewId == '/modulErstellen.xhtml' ? 'active' : ''}"><h:link outcome = "modulErstellen">Modul erstellen</h:link></li>
-					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "modulLoeschen">Modul löschen</h:link></li>
-					   <li class="#{view.viewId == '/modulAendern1.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern1">Modul ändern</h:link></li>
+					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "modulLoeschen">Modul l&ouml;schen</h:link></li>
+					   <li class="#{view.viewId == '/modulAendern1.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern1">Modul &auml;ndern</h:link></li>
 					</ul>
 				</h:panelGroup>
 			</h:panelGroup>
@@ -64,9 +64,11 @@
 					<ul>
 					   <li class="#{view.viewId == '/login.xhtml' ? 'active' : ''}"><h:link outcome = "login">Bibliothek</h:link></li>
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
-					   <li class="#{view.viewId == '/modulAendern1.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern1">Modul ändern</h:link></li>
-					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "modulLoeschen">Modul löschen</h:link></li>
-					   <li class="#{view.viewId == '/modulUebernehmen.xhtml' ? 'active' : ''}"><h:link outcome = "modulUebernehmen">Modul übernehmen</h:link></li>
+					   <li class="#{view.viewId == '/modulAendern1.xhtml' ? 'active' : ''}"><h:link outcome = "handbuchverwaltungStudiendekan">Handbuchverwaltung</h:link></li>
+					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "loeschverwaltungStudiendekan">L&ouml;schverwaltung</h:link></li>
+					   <li class="#{view.viewId == '/modulUebernehmen.xhtml' ? 'active' : ''}"><h:link outcome = "aenderungsverwaltungStudiendekan">&Auml;nderungsverwaltung</h:link></li>
+					
+					   
 					   </ul>
 				</h:panelGroup>
 			</h:panelGroup>
