--- a/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
@@ -64,12 +64,11 @@
 					<ul>
 					   <li class="#{view.viewId == '/login.xhtml' ? 'active' : ''}"><h:link outcome = "login">Bibliothek</h:link></li>
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
-					   <li class="#{view.viewId == '/modulAendern1.xhtml' ? 'active' : ''}"><h:link outcome = "handbuchverwaltungStudiendekan">Handbuchverwaltung</h:link></li>
-					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "loeschverwaltungStudiendekan">L&ouml;schverwaltung</h:link></li>
-					   <li class="#{view.viewId == '/modulUebernehmen.xhtml' ? 'active' : ''}"><h:link outcome = "aenderungsverwaltungStudiendekan">&Auml;nderungsverwaltung</h:link></li>
-					
-					   
-					   </ul>
+					   <li class="#{view.viewId == '/modulhandbuchErstellenStudiendekan.xhtml' ? 'active' : ''}"><h:link outcome = "modulhandbuchErstellenStudiendekan">Modulhandbuch erstellen</h:link></li>
+					   <li class="#{view.viewId == '/handbuchverwaltungStudiendekan.xhtml' ? 'active' : ''}"><h:link outcome = "handbuchverwaltungStudiendekan">Handbuchverwaltung</h:link></li>
+					   <li class="#{view.viewId == '/loeschverwaltungStudiendekan.xhtml' ? 'active' : ''}"><h:link outcome = "loeschverwaltungStudiendekan">L&ouml;schverwaltung</h:link></li>
+					   <li class="#{view.viewId == '/aenderungsverwaltungStudiendekan.xhtml' ? 'active' : ''}"><h:link outcome = "aenderungsverwaltungStudiendekan">&Auml;nderungsverwaltung</h:link></li>
+				</ul>
 				</h:panelGroup>
 			</h:panelGroup>
 	</h:panelGroup>
