--- a/Sopra/WebContent/WEB-INF/templates/header.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/header.xhtml
@@ -53,6 +53,7 @@
 								</ul>
 							</li>
 						</ul>
+					<h:outputText value="Stichtag am: #{userBean.stichtag}"></h:outputText>
 					</h:form>
 				</h:panelGroup>
 			</h:panelGroup>
