--- a/Sopra/WebContent/resources/css/styleHauptfensterInhalt.css
+++ b/Sopra/WebContent/resources/css/styleHauptfensterInhalt.css
@@ -104,7 +104,7 @@ body{
 	margin-top: 20px;
 	border: thin solid black;
 	width: 98.5%;
-	min-height: 750px;
+	min-height: 800px;
 	padding: 7px;
 }
 
@@ -322,7 +322,7 @@ select {
 	margin-top: 20px;
 	border: thin solid black;
 	min-width: 98.5%;
-	min-height: 300px;
+	min-height: 500px;
 	padding: 7px;
 }
 
@@ -336,6 +336,13 @@ select {
 	
 }
 	
-	
+/*Hauptfenster für Änderungsverwaltung*/
+.hauptfensterAenderungsverwaltung{
+	margin-top: 20px;
+	border: thin solid black;
+	min-width: 98.5%;
+	min-height: 400px;
+	padding: 7px;
+}
 	
 	
