diverse Korrekturen + Kommentare

--- a/Sopra/WebContent/WEB-INF/templates/header.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/header.xhtml
@@ -50,7 +50,7 @@
 								</ul>
 							</li>
 						</ul>
-					<h:outputText value="Stichtag am: #{userBean.stichtag}"></h:outputText>
+					<h:outputText value="Stichtag am: #{stichtagBean.aktStichtag}"></h:outputText>
 					</h:form>
 				</h:panelGroup>
 			</h:panelGroup>
