--- a/Sopra/WebContent/resources/css/styleLogin.css
+++ b/Sopra/WebContent/resources/css/styleLogin.css
@@ -1,6 +1,6 @@
 /*Login*/
 .login{
-	position: absolute;
+	position:absolute;
 	width: 304px;
 	right: 0px;
 	top: 0px;
@@ -25,7 +25,7 @@
 }
 
 .menu {
-	width: 800px;
+	width: 800px;*/
 }
 
 .menu h3 {
@@ -42,6 +42,7 @@
 	position: absolute;
 	margin: 0 auto;
 	list-style: none;
+	right: 0px;
 }
 
 .menu ul li {
