--- a/Sopra/WebContent/WEB-INF/templates/header.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/header.xhtml
@@ -51,7 +51,7 @@
 						</ul>
 						
 				</h:panelGroup>
-						<h:panelGroup layout="block;" styleClass="stichtag"><h:outputText style="font-family:arial; font-size:14px;" value="Stichtag am: #{userBean.stichtag}"></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block;" styleClass="stichtag"><h:outputText style="font-family:arial; font-size:14px;" value="Stichtag am: #{stichtagBean.aktStichtag}"></h:outputText></h:panelGroup>
 					</h:form>
 			</h:panelGroup>
 		</h:panelGroup>
